--- a/dokka/com/skillw/pouvoir/internal/manager/package-summary.html
+++ b/dokka/com/skillw/pouvoir/internal/manager/package-summary.html
@@ -123,9 +123,9 @@ var pathtoroot = "../../../../../";
 
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=PlaceHolderDataManagerImpl.html>PlaceHolderDataManagerImpl</a></th><td class="colLast"></td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=PouvoirConfig.html>PouvoirConfig</a></th><td class="colLast"></td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=PouPlaceHolderAPIImpl.html>PouPlaceHolderAPIImpl</a></th><td class="colLast"></td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=RPGPlaceHolderAPIImpl.html>RPGPlaceHolderAPIImpl</a></th><td class="colLast"></td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=PouvoirConfig.html>PouvoirConfig</a></th><td class="colLast"></td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=ScriptAnnotationManagerImpl.html>ScriptAnnotationManagerImpl</a></th><td class="colLast"></td></tr>
 
